vemo-app/main/default/objects/Case/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Program</label>
    <referenceTo>StudentProgram__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>