vemo-app/main/default/objects/Case/fields/ApplicationAllocatedAmount__c.field-meta.xml
<CustomField>
    <fullName>ApplicationAllocatedAmount__c</fullName>
    <label>(DEPRECATE)Application Allocated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>