vemo-app/main/default/objects/Case/fields/ApplicationEnrollmentStatus__c.field-meta.xml
<CustomField>
    <fullName>ApplicationEnrollmentStatus__c</fullName>
    <label>(DEPRECATE)Application Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EnrollmentStatus</valueSetName>
    </valueSet>
</CustomField>