vemo-app/main/default/objects/Case/fields/ApplicationExpectedGraduationDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationExpectedGraduationDate__c</fullName>
    <label>(DEPRECATE) Expected Graduation Date</label>
    <type>Date</type>
</CustomField>