vemo-app/main/default/objects/Case/fields/ApplicationGradeLevel__c.field-meta.xml
<CustomField>
    <fullName>ApplicationGradeLevel__c</fullName>
    <label>(DEPRECATE)Application Grade Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GradeLevel</valueSetName>
    </valueSet>
</CustomField>