vemo-app/main/default/objects/Case/fields/ApplicationIncomeShare__c.field-meta.xml
<CustomField>
    <fullName>ApplicationIncomeShare__c</fullName>
    <label>(DEPRECATE)Application Income Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>