vemo-app/main/default/objects/Case/fields/ApplicationPaymentCap__c.field-meta.xml
<CustomField>
    <fullName>ApplicationPaymentCap__c</fullName>
    <label>(DEPRECATE)Application Payment Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>