vemo-app/main/default/objects/Case/fields/ApplicationPaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>ApplicationPaymentTerm__c</fullName>
    <label>(DEPRECATE)Application Payment Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>