vemo-app/main/default/objects/Case/fields/ApplicationProgramOfStudyDescription__c.field-meta.xml
<CustomField>
    <fullName>ApplicationProgramOfStudyDescription__c</fullName>
    <formula>ApplicationSchoolProgramOfStudy__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(DEPRECATE)Program of Study Description</label>
    <type>Text</type>
</CustomField>