vemo-app/main/default/objects/Case/fields/ApplicationRequestedAmount__c.field-meta.xml
<CustomField>
    <fullName>ApplicationRequestedAmount__c</fullName>
    <label>(DEPRECATE)Requested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>