vemo-app/main/default/objects/Case/fields/ApplicationResidency__c.field-meta.xml
<CustomField>
    <fullName>ApplicationResidency__c</fullName>
    <label>(DEPRECATE)Application Residency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Residency</valueSetName>
    </valueSet>
</CustomField>