vemo-app/main/default/objects/Case/fields/ApplicationSchoolProgramOfStudy__c.field-meta.xml
<CustomField>
    <fullName>ApplicationSchoolProgramOfStudy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(DEPRECATE)Major (SchoolProgramOfStudy)</label>
    <referenceTo>SchoolProgramsOfStudy__c</referenceTo>
    <relationshipLabel>Cases (Application Major)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>