vemo-app/main/default/objects/Case/fields/CertificationChanges__c.field-meta.xml
<CustomField>
    <fullName>CertificationChanges__c</fullName>
    <formula>if( ApplicationRequestedAmount__c != CertifiedAllocatedAmount__c, true, false) || 
if( Text(ApplicationEnrollmentStatus__c) != Text(CertifiedEnrollmentStatus__c) , true, false) || 
if( ApplicationExpectedGraduationDate__c != CertifiedExpectedGraduationDate__c , true, false) || 
if( ApplicationSchoolProgramOfStudy__c != CertifiedSchoolProgramOfStudy__c , true, false) || 
if( Text(ApplicationResidency__c) != Text(CertifiedResidency__c) , true, false) || 
if( Text(ApplicationGradeLevel__c) != Text(CertifiedGradeLevel__c) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(DEPRECATE)Certification Changes</label>
    <type>Checkbox</type>
</CustomField>