vemo-app/main/default/objects/Case/fields/CertificationProcess__c.field-meta.xml
<CustomField>
    <fullName>CertificationProcess__c</fullName>
    <label>(DEPRECATE)Certification Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>