vemo-app/main/default/objects/Case/fields/CertifiedAllocatedAmount__c.field-meta.xml
<CustomField>
    <fullName>CertifiedAllocatedAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>(DEPRECATE)Certified Allocated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>