vemo-app/main/default/objects/Case/fields/CertifiedEligibleToReapply__c.field-meta.xml
<CustomField>
    <fullName>CertifiedEligibleToReapply__c</fullName>
    <defaultValue>true</defaultValue>
    <label>(DEPRECATE)Student Eligible to Reapply?</label>
    <type>Checkbox</type>
</CustomField>