vemo-app/main/default/objects/Case/fields/CertifiedEnrollmentStatus__c.field-meta.xml
<CustomField>
    <fullName>CertifiedEnrollmentStatus__c</fullName>
    <label>(DEPRECATE)Certified Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EnrollmentStatus</valueSetName>
    </valueSet>
</CustomField>