vemo-app/main/default/objects/Case/fields/CertifiedExpectedGraduationDate__c.field-meta.xml
<CustomField>
    <fullName>CertifiedExpectedGraduationDate__c</fullName>
    <label>((DEPRECATE)Expected Graduation Date</label>
    <type>Date</type>
</CustomField>