vemo-app/main/default/objects/Case/fields/CertifiedGradeLevel__c.field-meta.xml
<CustomField>
    <fullName>CertifiedGradeLevel__c</fullName>
    <label>(DEPRECATE)Certified Grade Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GradeLevel</valueSetName>
    </valueSet>
</CustomField>