vemo-app/main/default/objects/Case/fields/CertifiedIncomeShare__c.field-meta.xml
<CustomField>
    <fullName>CertifiedIncomeShare__c</fullName>
    <label>(DEPRECATE)Certified Income Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>