vemo-app/main/default/objects/Case/fields/CertifiedPaymentCap__c.field-meta.xml
<CustomField>
    <fullName>CertifiedPaymentCap__c</fullName>
    <label>(DEPRECATE)Certified Payment Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>