vemo-app/main/default/objects/Case/fields/CertifiedPaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>CertifiedPaymentTerm__c</fullName>
    <label>(DEPRECATE)Certified Payment Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>