vemo-app/main/default/objects/Case/fields/CertifiedProgramOfStudyDescription__c.field-meta.xml
<CustomField>
    <fullName>CertifiedProgramOfStudyDescription__c</fullName>
    <formula>CertifiedSchoolProgramOfStudy__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>((DEPRECATE)Program of Study Description</label>
    <type>Text</type>
</CustomField>