vemo-app/main/default/objects/Case/fields/CertifiedResidency__c.field-meta.xml
<CustomField>
    <fullName>CertifiedResidency__c</fullName>
    <label>(DEPRECATE)Certified Residency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Residency</valueSetName>
    </valueSet>
</CustomField>