vemo-app/main/default/objects/Case/fields/CertifiedSchoolProgramOfStudy__c.field-meta.xml
<CustomField>
    <fullName>CertifiedSchoolProgramOfStudy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(DEPRECATE)(Major (SchoolProgramOfStudy)</label>
    <referenceTo>SchoolProgramsOfStudy__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>