vemo-app/main/default/objects/Case/fields/PaymentInstruction__c.field-meta.xml
<CustomField>
    <fullName>PaymentInstruction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Instruction</label>
    <referenceTo>PaymentInstruction__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>