vemo-app/main/default/objects/Case/fields/RecordLabel__c.field-meta.xml
<CustomField>
    <fullName>RecordLabel__c</fullName>
    <formula>Account.RecordLabel__c + ':' + Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Label</label>
    <type>Text</type>
</CustomField>