vemo-app/main/default/objects/Case/fields/RecordLink__c.field-meta.xml
<CustomField>
    <fullName>RecordLink__c</fullName>
    <formula>HYPERLINK("../" &amp; Id, RecordLabel__c, "_top")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>