vemo-app/main/default/objects/Case/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Student Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>