vemo-app/main/default/objects/Case/recordTypes/Certification.recordType-meta.xml
<RecordType>
    <fullName>Certification</fullName>
    <active>true</active>
    <businessProcess>Certification</businessProcess>
    <description>Certification Cases</description>
    <label>Certification</label>
</RecordType>