vemo-app/main/default/objects/Case/recordTypes/Origination.recordType-meta.xml
<RecordType>
    <fullName>Origination</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <description>Origination</description>
    <label>Origination</label>
</RecordType>