vemo-app/main/default/objects/Case/recordTypes/SchoolOriginated.recordType-meta.xml
<RecordType>
    <fullName>SchoolOriginated</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>School Originated</label>
</RecordType>