vemo-app/main/default/objects/Case/validationRules/CertifiedAmtCannotBeGreaterThanRequested.validationRule-meta.xml
<ValidationRule>
    <fullName>CertifiedAmtCannotBeGreaterThanRequested</fullName>
    <active>true</active>
    <errorConditionFormula>CertifiedAllocatedAmount__c > ApplicationRequestedAmount__c</errorConditionFormula>
    <errorDisplayField>CertifiedAllocatedAmount__c</errorDisplayField>
    <errorMessage>The Certified Allocated Amount cannot exceed the Requested Amount from the Application</errorMessage>
</ValidationRule>