vemo-app/main/default/objects/Case/validationRules/noSchoolEditAfterCertificationProcess.validationRule-meta.xml
<ValidationRule>
    <fullName>noSchoolEditAfterCertificationProcess</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.GlobalSettings__c.ValidationRules__c &amp;&amp;
$Profile.Name = "8.0 - College Admin Default" &amp;&amp; 
ISPICKVAL(PRIORVALUE( CertificationProcess__c ),"Certified")</errorConditionFormula>
    <errorMessage>Changes cannot be made to this record after it has been certified or cancelled.  Please open a new case for Vemo Support to request assistance.</errorMessage>
</ValidationRule>