vemo-app/main/default/objects/Case/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CASES.CLOSED</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE</columns>
    <columns>CASES.PRIORITY</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>