vemo-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE</columns>
    <columns>CASES.PRIORITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Open Cases</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>