vemo-app/main/default/objects/Case/listViews/Certification_School.listView-meta.xml
<ListView>
    <fullName>Certification_School</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE</columns>
    <columns>CASES.PRIORITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Requesting Certification</value>
    </filters>
    <label>Certification School</label>
</ListView>