vemo-app/main/default/objects/Case/listViews/Origination_Case.listView-meta.xml
<ListView>
    <fullName>Origination_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Origination</label>
    <queue>Origination</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>