vemo-app/main/default/objects/Case/listViews/Servicing_Case.listView-meta.xml
<ListView>
    <fullName>Servicing_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE</columns>
    <columns>CASES.PRIORITY</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Servicing</label>
    <queue>Servicing</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>